issues/31 - Fixes for state_get_auction_info condor changes